# free-theorems-static-webui

./: .ghcid  .travis.yml  CHANGELOG.md  CNAME  LICENSE  cabal.project  free-theorems-static-webui.cabal  lib.js  out.frefs.js  out.frefs.json  out.stats
free-theorems/: LICENSE
free-theorems-0.3.2.0/: README  free-theorems.cabal  runtests
free-theorems-0.3.2.0/src/: Arbitraries.hs  FrontendCheckGlobalTests.hs  FrontendOtherTests.hs  FrontendTypeExpressionsTests.hs  InterpretationTests.hs  Tests.hs
free-theorems-0.3.2.0/src/Language/Haskell/: FreeTheorems.hs
free-theorems-0.3.2.0/src/Language/Haskell/FreeTheorems/: Intermediate.hs  PrettyTheorems.hs  PrettyTypes.hs  Syntax.hs
free-theorems-0.3.2.0/src/Language/Haskell/FreeTheorems/Frontend/: CheckGlobal.hs  CheckLocal.hs  Error.hs
free-theorems-0.3.2.0/src/Language/Haskell/FreeTheorems/Parser/: Haskell98.hs
free-theorems/src/: FrontendCheckLocalTests.hs  ParserPrettyPrinterTests.hs  Runtests.hs
free-theorems/src/Language/Haskell/FreeTheorems/: BasicSyntax.hs  Frontend.hs  LanguageSubsets.hs  NameStores.hs  PrettyBase.hs  PrettyTheorems.hs  Theorems.hs  Unfold.hs  ValidSyntax.hs
free-theorems/src/Language/Haskell/FreeTheorems/Frontend/: Error.hs  TypeExpressions.hs
free-theorems/src/Language/Haskell/FreeTheorems/Parser/: Hsx.hs
free-theorems/src/Language/Haskell/FreeTheorems/Theorems/: Simplify.hs
src/: FTTools.hs  KnownDeclarations.hs  Main.hs
