name:                free-theorems-static-webui
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/nomeata/free-theorems-static-webui
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
copyright:           2018 Joachim Breitner
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable free-theorems-static-webui
  main-is:             Main.hs
  other-modules: FTTools
  other-modules: KnownDeclarations
  build-depends: base >=4.10 && <4.12
  build-depends: free-theorems == 0.3.*
  build-depends: text
  build-depends: transformers
  build-depends: reflex-dom == 0.4.*
  build-depends: git-embed
  hs-source-dirs:      src
  default-language:    Haskell2010
